--- a/notebook/data_process/data_preprocessing_final.ipynb
+++ b/notebook/data_process/data_preprocessing_final.ipynb
@@ -755,6 +755,50 @@
    "source": [
     "df_merged.to_json(\"data/processed/dataset_merged_llama_nllb_GPT_Dict_fake_targets_with_split.jsonl\", orient=\"records\", lines=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "translation_source\n",
+       "llama3_70B                       207011\n",
+       "nllb                             207011\n",
+       "GPT4                             207011\n",
+       "Dictionary_Checking_After_GPT    207011\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged.translation_source.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df_merge = pd.read_json(\"data/processed/dataset_merged_llama_nllb_GPT_Dict_fake_targets_with_split.jsonl\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
