Update for inverse training EN to LB

--- a/notebook/data_process/data_preprocessing_final.ipynb
+++ b/notebook/data_process/data_preprocessing_final.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,6 +791,108 @@
     "\n",
     "\n",
     "df_merge = pd.read_json(\"data/processed/dataset_merged_llama_nllb_GPT_Dict_fake_targets_with_split.jsonl\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "translation_source\n",
+       "llama3_70B                       207011\n",
+       "nllb                             207011\n",
+       "GPT4                             207011\n",
+       "Dictionary_Checking_After_GPT    207011\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge.translation_source.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge[df_merge[\"translation_source\"]==\"nllb\"].to_json(\"data/training_dataset/dataset_nllb_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge[df_merge[\"translation_source\"]==\"llama3_70B\"].to_json(\"data/training_dataset/dataset_llama_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge[df_merge[\"translation_source\"]==\"GPT4\"].to_json(\"data/training_dataset/dataset_GPT_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge[(df_merge[\"translation_source\"]==\"nllb\") | (df_merge[\"translation_source\"]==\"llama3_70B\")].to_json(\"data/training_dataset/dataset_nllb_llama_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge[(df_merge[\"translation_source\"]==\"nllb\") | (df_merge[\"translation_source\"]==\"llama3_70B\") | (df_merge[\"translation_source\"]==\"GPT4\")].to_json(\"data/training_dataset/dataset_nllb_llama_GPT_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge[(df_merge[\"translation_source\"]==\"nllb\") | (df_merge[\"translation_source\"]==\"llama3_70B\") | (df_merge[\"translation_source\"]==\"Dictionary_Checking_After_GPT\")].to_json(\"data/training_dataset/dataset_nllb_llama_GPT_DictCheck_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "split\n",
+       "train    813524\n",
+       "val       14520\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge.split.value_counts()"
    ]
   },
   {
