--- a/notebook/training/Llama3_8b_SFT_Finetune.ipynb
+++ b/notebook/training/Llama3_8b_SFT_Finetune.ipynb
@@ -91,29 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['prompt_response'],\n",
-       "    num_rows: 1354\n",
-       "})"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset[\"validation\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "id": "4R6GaqRowU1r"
@@ -2123,7 +2100,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "vllm_env_lujun",
+   "display_name": "mt_lux_env",
    "language": "python",
    "name": "python3"
   },
@@ -2137,7 +2114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
