update code for training

--- a/notebook/training/CPT.ipynb
+++ b/notebook/training/CPT.ipynb
@@ -404,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "causalAnalysis",
+   "display_name": "mt_lux_env",
    "language": "python",
    "name": "python3"
   },
