update sft code

--- a/notebook/data_process/data_preprocessing_final.ipynb
+++ b/notebook/data_process/data_preprocessing_final.ipynb
@@ -896,11 +896,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find the Top 300 Validation Samples for the Paper"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "gpt_training_df = pd.read_json(\"/home/snt/projects_lujun/mt_luxembourgish/data/training_dataset/dataset_GPT_split.jsonl\", lines=True)\n",
+    "gpt_training_df[\"input_length\"] = gpt_training_df[\"input\"].str.len()\n",
+    "gpt_val_df = gpt_training_df[gpt_training_df[\"split\"]==\"val\"]\n",
+    "test_df =gpt_val_df[(gpt_val_df[\"input_length\"]<600) &(gpt_val_df[\"input_length\"]>400)]\n",
+    "test_df.sample(300).to_json(\"data/training_dataset/dataset_val_300.jsonl\", orient=\"records\", lines=True)"
+   ]
   }
  ],
  "metadata": {
