--- a/notebook/training/Llama3_4b_SFT_Finetune.ipynb
+++ b/notebook/training/Llama3_4b_SFT_Finetune.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {
     "id": "q7FpESrn59uy",
     "outputId": "2a75e609-caa0-4fc7-ab53-893d1a69e09d"
@@ -657,25 +657,6 @@
     "                for key, value in logs.items():\n",
     "                    if isinstance(value, (int, float)):\n",
     "                        self.writer.add_scalar(key, value, self.state.global_step)\n",
-    "\n",
-    "    # # Define the early stopping callback\n",
-    "    # early_stopping = EarlyStoppingCallback(\n",
-    "    #     early_stopping_patience=3,\n",
-    "    #     early_stopping_threshold=0.005,\n",
-    "    # )\n",
-    "\n",
-    "    # # Modify your evaluation function to ensure it returns a dictionary with 'accuracy'\n",
-    "    # def compute_metrics(eval_pred):\n",
-    "    #     logits, labels = eval_pred\n",
-    "    #     predictions = np.argmax(logits, axis=-1)\n",
-    "    #     return {\"accuracy\": (predictions == labels).mean()}  # Ensure this is the name expected by your Trainer setup\n",
-    "\n",
-    "    # # Quick test with a reduced number of steps\n",
-    "    # training_arguments.num_train_epochs = 1  # Reduce for a quick test\n",
-    "    # training_arguments.eval_steps = 50       # Evaluate more frequently to test early stopping\n",
-    "    # training_arguments.save_steps = 50       # Save more frequently to ensure saving logic works\n",
-    "\n",
-    "    # Setup the trainer with the prepared datasets\n",
     "\n",
     "    trainer = SFTTrainer(\n",
     "        model=model,\n",
@@ -1332,7 +1313,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "mt_lux_env",
+   "display_name": "vllm_env_lujun",
    "language": "python",
    "name": "python3"
   },
@@ -1346,7 +1327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
