--- a/notebook/training/CPT_EN_LB_SFT.ipynb
+++ b/notebook/training/CPT_EN_LB_SFT.ipynb
@@ -259,21 +259,21 @@
     ").select_columns([\"full_input_CPT_prompt\"])\n",
     "\n",
     "\n",
-    "train_dataset_SFT = train_dataset.map(\n",
-    "    lambda sample: {\n",
-    "        **create_prompt(sample, mode=\"train\", tokenizer=tokenizer),\n",
-    "        \"inputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"full_input_prompt\"],\n",
-    "        \"outputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"labels\"]\n",
-    "    }\n",
-    ")\n",
+    "# train_dataset_SFT = train_dataset.map(\n",
+    "#     lambda sample: {\n",
+    "#         **create_prompt(sample, mode=\"train\", tokenizer=tokenizer),\n",
+    "#         \"inputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"full_input_prompt\"],\n",
+    "#         \"outputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"labels\"]\n",
+    "#     }\n",
+    "# )\n",
     "\n",
-    "val_dataset_SFT = val_dataset.map(\n",
-    "    lambda sample: {\n",
-    "        **create_prompt(sample, mode=\"train\", tokenizer=tokenizer),\n",
-    "        \"inputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"full_input_prompt\"],\n",
-    "        \"outputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"labels\"]\n",
-    "    }\n",
-    ")\n",
+    "# val_dataset_SFT = val_dataset.map(\n",
+    "#     lambda sample: {\n",
+    "#         **create_prompt(sample, mode=\"train\", tokenizer=tokenizer),\n",
+    "#         \"inputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"full_input_prompt\"],\n",
+    "#         \"outputs\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\"labels\"]\n",
+    "#     }\n",
+    "# )\n",
     "\n",
     "# dataset_CPT = DatasetDict({\"train\": train_dataset_CPT, \"val\": val_dataset_CPT})\n",
     "# dataset_SFT = DatasetDict({\"train\": train_dataset_SFT, \"val\": val_dataset_SFT})\n",
@@ -291,16 +291,16 @@
     "        return_tensors=\"pt\",\n",
     "    )\n",
     "\n",
-    "def tokenize_function_SFT(examples):\n",
-    "    tokenized_example = tokenizer(\n",
-    "        examples[\"inputs\"],\n",
-    "        truncation=True,\n",
-    "        padding=\"max_length\",\n",
-    "        max_length=MAX_LEN,\n",
-    "        return_tensors=\"pt\",\n",
-    "    )\n",
-    "    tokenized_example[\"labels\"] = tokenizer(examples[\"labels\"], truncation=True, padding=\"max_length\", max_length=MAX_LEN, return_tensors=\"pt\")[\"input_ids\"]\n",
-    "    return tokenized_example\n",
+    "# def tokenize_function_SFT(examples):\n",
+    "#     tokenized_example = tokenizer(\n",
+    "#         examples[\"inputs\"],\n",
+    "#         truncation=True,\n",
+    "#         padding=\"max_length\",\n",
+    "#         max_length=MAX_LEN,\n",
+    "#         return_tensors=\"pt\",\n",
+    "#     )\n",
+    "#     tokenized_example[\"labels\"] = tokenizer(examples[\"labels\"], truncation=True, padding=\"max_length\", max_length=MAX_LEN, return_tensors=\"pt\")[\"input_ids\"]\n",
+    "#     return tokenized_example\n",
     "\n",
     "\n",
     "tokenized_train_dataset_CPT = train_dataset_CPT.map(\n",
@@ -310,13 +310,13 @@
     "    tokenize_function_CPT, batched=True, remove_columns=[\"full_input_CPT_prompt\"]\n",
     ")\n",
     "\n",
-    "tokenized_train_dataset_SFT = train_dataset_SFT.map(\n",
-    "    tokenize_function_SFT, batched=True, remove_columns=[\"inputs\",\"outputs\"]\n",
-    ")   \n",
+    "# tokenized_train_dataset_SFT = train_dataset_SFT.map(\n",
+    "#     tokenize_function_SFT, batched=True, remove_columns=[\"inputs\",\"outputs\"]\n",
+    "# )   \n",
     "\n",
-    "tokenized_val_dataset_SFT = val_dataset_SFT.map(\n",
-    "    tokenize_function_SFT, batched=True, remove_columns=[\"inputs\",\"outputs\"]\n",
-    ")\n"
+    "# tokenized_val_dataset_SFT = val_dataset_SFT.map(\n",
+    "#     tokenize_function_SFT, batched=True, remove_columns=[\"inputs\",\"outputs\"]\n",
+    "# )\n"
    ]
   },
   {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -504,53 +504,53 @@
     "    trainer.train(resume_from_checkpoint=resume_from_checkpoint)\n",
     "    print(\"Finished training CPT.\")\n",
     "\n",
-    "def train_ddp_accelerate_sft():\n",
-    "    model = AutoModelForCausalLM.from_pretrained(model_name)\n",
-    "    model.config.use_cache = False\n",
-    "    current = time.time()\n",
-    "    if resume_from_checkpoint:\n",
-    "        output_dir = resume_checkpoint_path\n",
-    "    else:\n",
-    "        input_file_name = training_dataset_path.split(\"/\")[-1].split(\".\")[0]\n",
-    "        output_dir = f\"logs/fit_{current}_{train_ratio}_{input_file_name}\"\n",
+    "# def train_ddp_accelerate_sft():\n",
+    "#     model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "#     model.config.use_cache = False\n",
+    "#     current = time.time()\n",
+    "#     if resume_from_checkpoint:\n",
+    "#         output_dir = resume_checkpoint_path\n",
+    "#     else:\n",
+    "#         input_file_name = training_dataset_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "#         output_dir = f\"logs/fit_{current}_{train_ratio}_{input_file_name}\"\n",
     "\n",
-    "    print(print_trainable_parameters(model))\n",
+    "#     print(print_trainable_parameters(model))\n",
     "    \n",
-    "    training_args = TrainingArguments(\n",
-    "        output_dir=output_dir,\n",
-    "        num_train_epochs=num_train_epochs,\n",
-    "        per_device_train_batch_size=per_device_train_batch_size,\n",
-    "        per_device_eval_batch_size=per_device_eval_batch_size,\n",
-    "        warmup_ratio=warmup_ratio,\n",
-    "        evaluation_strategy=evaluation_strategy,\n",
-    "        save_strategy=save_strategy,\n",
-    "        # eval_steps=eval_steps,\n",
-    "        logging_steps=logging_steps,\n",
-    "        learning_rate=learning_rate,\n",
-    "        weight_decay=weight_decay,\n",
-    "        fp16=fp16,\n",
-    "        max_grad_norm=max_grad_norm,\n",
-    "        group_by_length=True,\n",
-    "        lr_scheduler_type=\"cosine\",\n",
-    "        report_to=\"tensorboard\",\n",
-    "        ddp_find_unused_parameters=False,\n",
-    "        remove_unused_columns=False,\n",
-    "        disable_tqdm=False,\n",
-    "        load_best_model_at_end=True,\n",
-    "    )\n",
+    "#     training_args = TrainingArguments(\n",
+    "#         output_dir=output_dir,\n",
+    "#         num_train_epochs=num_train_epochs,\n",
+    "#         per_device_train_batch_size=per_device_train_batch_size,\n",
+    "#         per_device_eval_batch_size=per_device_eval_batch_size,\n",
+    "#         warmup_ratio=warmup_ratio,\n",
+    "#         evaluation_strategy=evaluation_strategy,\n",
+    "#         save_strategy=save_strategy,\n",
+    "#         # eval_steps=eval_steps,\n",
+    "#         logging_steps=logging_steps,\n",
+    "#         learning_rate=learning_rate,\n",
+    "#         weight_decay=weight_decay,\n",
+    "#         fp16=fp16,\n",
+    "#         max_grad_norm=max_grad_norm,\n",
+    "#         group_by_length=True,\n",
+    "#         lr_scheduler_type=\"cosine\",\n",
+    "#         report_to=\"tensorboard\",\n",
+    "#         ddp_find_unused_parameters=False,\n",
+    "#         remove_unused_columns=False,\n",
+    "#         disable_tqdm=False,\n",
+    "#         load_best_model_at_end=True,\n",
+    "#     )\n",
     "\n",
-    "    trainer = Trainer(\n",
-    "        model=model,\n",
-    "        args=training_args,\n",
-    "        train_dataset=tokenized_train_dataset_SFT,\n",
-    "        eval_dataset=tokenized_val_dataset_SFT,\n",
-    "        tokenizer=tokenizer,\n",
-    "        data_collator=data_collator,\n",
-    "        callbacks=[EarlyStoppingCallback(early_stopping_patience=2)],\n",
-    "    )\n",
+    "#     trainer = Trainer(\n",
+    "#         model=model,\n",
+    "#         args=training_args,\n",
+    "#         train_dataset=tokenized_train_dataset_SFT,\n",
+    "#         eval_dataset=tokenized_val_dataset_SFT,\n",
+    "#         tokenizer=tokenizer,\n",
+    "#         data_collator=data_collator,\n",
+    "#         callbacks=[EarlyStoppingCallback(early_stopping_patience=2)],\n",
+    "#     )\n",
     "\n",
-    "    trainer.train(resume_from_checkpoint=resume_from_checkpoint)\n",
-    "    print(\"Finished training CPT.\")\n",
+    "#     trainer.train(resume_from_checkpoint=resume_from_checkpoint)\n",
+    "#     print(\"Finished training CPT.\")\n",
     "    \n",
     "\n",
     "from accelerate import Accelerator\n",
