update sft and reconstruct code

--- a/notebook/eval/eval_llama.ipynb
+++ b/notebook/eval/eval_llama.ipynb
@@ -245,10 +245,8 @@
     "\n",
     "    # Construct the full prompt.\n",
     "    full_prompt = (\n",
-    "\n",
     "        \"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\n\" + system_message + \"<|eot_id|>\" +  # System Message\n",
-    "\n",
-    "        \"<|start_header_id|>user<|end_header_id|>\\n\\n\" + f\"Translate the {src_lng} input text into {tgt_lng}.\\n{input_text}. Do not include any additional information or unrelated content.\"  +  \"<|eot_id|><|start_header_id|>assistant<|end_header_id|>\" # User Query\n",
+    "        \"<|start_header_id|>user<|end_header_id|>\\n\\n\" + f\"Translate the English input text into Luxembourgish. Do not include any additional information or unrelated content.\\n\\n {input_text}.\"  +  \"<|eot_id|><|start_header_id|>assistant<|end_header_id|>\" # User Query\n",
     "    )\n",
     "    if mode == \"train\":\n",
     "        full_prompt += (response + eos_token)  # Responses\n",
@@ -328,7 +326,7 @@
     "df_flores_results[\"Dataset\"] = \"FLORES\"\n",
     "\n",
     "df_results = pd.concat([df_RTL_results, df_flores_results], axis=0)\n",
-    "df_results.to_json(eval_output_path, orient=\"records\", lines=True)\n",
+    "x\n",
     "print(f\"Results saved to {eval_output_path}\")\n",
     "\n"
    ]
