update llama code

--- a/notebook/eval/eval_llama.ipynb
+++ b/notebook/eval/eval_llama.ipynb
@@ -246,8 +246,9 @@
     "    # Construct the full prompt.\n",
     "    full_prompt = (\n",
     "        \"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\n\" + system_message + \"<|eot_id|>\" +  # System Message\n",
-    "        \"<|start_header_id|>user<|end_header_id|>\\n\\n\" + f\"Translate the English input text into Luxembourgish. Do not include any additional information or unrelated content.\\n\\n {input_text}.\"  +  \"<|eot_id|><|start_header_id|>assistant<|end_header_id|>\" # User Query\n",
+    "        \"<|start_header_id|>user<|end_header_id|>\\n\\n\" + f\"Translate the English input text into Luxembourgish. Do not include any additional information or unrelated content.\\n\\n{input_text}\"  +  \"<|eot_id|><|start_header_id|>assistant<|end_header_id|>\" # User Query\n",
     "    )\n",
+    "\n",
     "    if mode == \"train\":\n",
     "        full_prompt += (response + eos_token)  # Responses\n",
     "\n",
