update SFT for training

--- a/notebook/data_process/data_preprocessing_final.ipynb
+++ b/notebook/data_process/data_preprocessing_final.ipynb
@@ -915,6 +915,41 @@
     "test_df =gpt_val_df[(gpt_val_df[\"input_length\"]<600) &(gpt_val_df[\"input_length\"]>400)]\n",
     "test_df.sample(300).to_json(\"data/training_dataset/dataset_val_300.jsonl\", orient=\"records\", lines=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract only GPT checked datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df = pd.read_json(\"/home/snt/projects_lujun/mt_luxembourgish/data/training_dataset/dataset_nllb_llama_GPT_DictCheck_split.jsonl\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df[\"translation_source\"]==\"Dictionary_Checking_After_GPT\"].to_json(\"data/training_dataset/dataset_GPT_dict_checking_split.jsonl\", orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
