update superglue evaluaion

--- a/notebook/data_process/data_preprocessing_final.ipynb
+++ b/notebook/data_process/data_preprocessing_final.ipynb
@@ -950,6 +950,47 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df = pd.read_json(\"/home/snt/projects_lujun/mt_luxembourgish/data/training_dataset/dataset_GPT_dict_checking_split.jsonl\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1 = df.sample(frac=0.01, random_state=42)\n",
+    "df_10 = df.sample(frac=0.10, random_state=42)\n",
+    "df_50 = df.sample(frac=0.50, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1.to_json(\"data/training_dataset/dataset_GPT_dict_checking_1_split.jsonl\", orient=\"records\", lines=True)\n",
+    "df_10.to_json(\"data/training_dataset/dataset_GPT_dict_checking_10_split.jsonl\", orient=\"records\", lines=True)\n",
+    "df_50.to_json(\"data/training_dataset/dataset_GPT_dict_checking_50_split.jsonl\", orient=\"records\", lines=True)"
+   ]
   }
  ],
  "metadata": {
